--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.7.0",
     "@tailus/themer": "^0.0.5",
     "@tailus/themer-button": "^0.0.7",
     "@tailus/themer-card": "^0.0.1",
@@ -20,10 +21,10 @@
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
-    "@astrojs/check": "^0.7.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/node": "^20.12.12"
   }
 }
